--- a/sass/_user.scss
+++ b/sass/_user.scss
@@ -10,6 +10,8 @@ html {
 
 body {
   background-color: black;
+  display: block;
+  position: relative;
 }
 
 h1,h2,h3,h4 {
