--- a/sass/header/_header-nav.scss
+++ b/sass/header/_header-nav.scss
@@ -27,19 +27,16 @@
 
 .nav-mobile {
   display: inline-block;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   width: 50%;
   height: 100vh;
   background-color: white;
-  z-index: 1;
-  
+  z-index: 10;
+  transform: translateX(100%);
   @media (min-width: 1279px) {
     display: none;
-  }
-  &.hide {
-    transform: translateX(100%);
   }
   &.show {
     transform: translateX(0);
